objects/copadoQuality__Compliance_Rule_Violation__c.object
<CustomObject>
    <description>This object will hold the details about the violations found in the CCH scans according to the specified ruleset.</description>
    <fields>
        <fullName>copadoQuality__End_Column__c</fullName>
        <label>End Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__End_Line__c</fullName>
        <label>End Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result</label>
        <referenceTo>copado__Result__c</referenceTo>
        <relationshipLabel>Compliance Rule Violations</relationshipLabel>
        <relationshipName>Compliance_Rule_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Start_Column__c</fullName>
        <label>Start Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Start_Line__c</fullName>
        <label>Start Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoQuality__URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Rule Violation</label>
    <nameField>
        <displayFormat>CRV-{0000}</displayFormat>
        <label>Compliance Rule Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rule Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>